fix: Set equal spacing between editors in phone view

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -184,7 +184,7 @@ body {
   display: flex;
   flex: 1;
   width: 100%;
-  padding: 5px 5px 0 5px;
+  padding: 0 5px 0 5px;
   min-height: 0px;
 }
 
@@ -198,7 +198,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1 0;
-  margin: 5px 5px 0 5px;
+  margin: 10px 5px 0 5px;
   min-width: 0px;
 }
 
